Fixed slight border jump

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ textarea,
     padding: 12px;
     margin: 5px 0 5px;
     background: white;
-    border: none;
+    border: 1px solid rgba(0,0,0,0);
     box-shadow: inset 5px 5px 10px rgba(0,7,36,.2);
     border-radius: 5px;  
 }
